--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1144,7 +1144,112 @@
   <p class="footnote">3. 2 Tim. 1, 11.</p>
   <p class="footnote">4. Ex. 12, 27.</p>
   <p class="footnote">5. «<i>mmo</i> dérive de la préposition complexe <i>n-amou</i>, qu'on trouve dans la <em>κοινὴ</em>) Ramesside; <i>namoù</i> avec l'accent sur la finale est devenu <i>nemò</i>, <i>mmò</i>, <i><sup>e</sup>mmò</i>». <i>Maspero, Revue Critique</i>, 16 Sept. 1905, p. 209.</p>
-  
+  <p>1. Dans les sens du génitif: <em>ⲟⲩⲁⲓ ⲙ̀ⲙⲱⲟⲩ</em> «un d'eux»; <em>ⲛⲓⲙ ⲙ̀ⲙⲱⲧⲉⲛ</em> «qui d'entre vous?».</p>
+  <p>2. Après les adverbes de lieu formés de <em>ⲟⲩⲓⲛⲁⲙ</em> «droite», <em>ϫⲁϭⲏ</em> «gauche», <em>ⲥⲁ</em> «côté», <em>ⲧ-ϩⲏ</em> «l'avant», <em>ⲫ-ⲁϩⲟⲩ</em> «l'arrière»: <em>ⲥⲁⲟⲩⲓⲛⲁⲙ ⲙ̀ⲙⲟⲕ</em> «à ta droite»; <em>ϩⲓⲫⲁϩⲟⲩ ⲙ̀ⲙⲟϥ</em> «derrière lui»; <em>ϩⲓⲧϩⲏ ⲙ̀ⲙⲟϥ</em> «devant lui»<sup class="footnote">1</sup>.</p>
+  <p>3. Après la particule de renforcement <em>ⲙ̀ⲙⲓⲛ</em> «même»: <em>ϧⲉⲛ ⲡⲉϥⲟⲩⲱϣ ⲙ̀ⲙⲓⲛ ⲙ̀ⲙⲟϥ</em> «par sa propre volonté»<sup class="footnote">2</sup>.</p>
+  <p>4. Le pronom <em>ⲙ̀ⲙⲟ⸗</em> sert aussi de complément direct à la forme <i>pleine</i> des verbes: <em>ⲁⲛⲓ̀ ⲛ̀ⲧⲉⲛⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ</em> «nous sommes venus l'adorer»<sup class="footnote">3</sup>.</p>
+  <p>Sur l'emploi de <em>ⲙ̀- ⲙ̀ⲙⲟ⸗</em> comme préposition, voir 316.</p>
+  <h5 class="smallcaps">IV. Autres formes personnelles.</h5>
+  <p>Il y a en copte un certain nombre de mots qui suivent en général le nom ou le pronom personnel pour en modifier le sens. Les voici:</p>
+  <p>1. <em>ϩⲱ⸗</em> aussi 4. <em>ⲛ̀ⲟⲩⲁⲧ⸗</em> de soi-même.</p>
+  <p>2. <em>ⲙ̀ⲙⲁⲩⲁⲧ⸗</em> seul 5. <em>ⲣⲱ</em> même.</p>
+  <p>3. <em>ⲧⲏⲣ⸗</em> tout 6. <em>ⲉⲣⲏⲟⲩ</em> ensemble.</p>
+  <p>Parmi ces mots, quatre sont toujours à l'état pronominal; les deux autres sont invariables.</p>
+  <p>1°. <em>ϩⲱ⸗</em> «aussi, même».</p>
+  <table>
+    <tr>
+      <th>Sing.</th><th></th><th>Pl.</th><th></th>
+    </tr>
+    <tr>
+      <td>1.</td><td><em>ϩⲱ</em></td><td>1.</td><td><em>ϩⲱⲛ</em></td>
+    </tr>
+    <tr>
+      <td>2 m.</td><td><em>ϩⲱⲕ</em></td><td>2.</td><td><em>ϩⲱⲧⲉⲛ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ϩⲱⲓ</em></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>3 m.</td><td><em>ϩⲱϥ</em></td><td>3.</td><td><em>ϩⲱⲟⲩ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ϩⲱⲥ</em></td><td></td><td></td>
+    </tr>
+  </table>
+  <p class="footnote">1. OSE. 353.</p>
+  <p class="footnote">2. Th. 113.</p>
+  <p class="footnote">3. Mt. 2, 2.</p>
+  <p>Ex: <em>ⲙⲁⲣⲉϥ ⲛⲁϩⲙⲉϥ ϩⲱϥ</em> «qu'il se sauve lui-même»<sup class="footnote">1</sup>.
+  <p><em>ⲁⲙⲟⲩ ⲉⲃⲟⲗ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲕϣⲧⲉⲙⲧⲁⲕⲟ ϩⲱⲕ</em> «sors afin de ne pas périr toi aussi»<sup class="footnote">2</sup>.</p></p>
+  <p>2°. <em>ⲙ̀ⲙⲁⲩⲁⲧ⸗</em> «seul».</p>
+  <table>
+    <tr>
+      <th>Sing.</th><th></th><th>Pl.</th><th></th>
+    </tr>
+    <tr>
+      <td>1.</td><td><em>ⲙ̀ⲙⲁⲩⲁⲧ</em></td><td>1.</td><td><em>ⲙ̀ⲙⲁⲩⲁⲧⲉⲛ</em></td>
+    </tr>
+    <tr>
+      <td>2 m.</td><td><em>ⲙ̀ⲙⲁⲩⲁⲧⲕ</em></td><td>2.</td><td><em>ⲙ̀ⲙⲁⲩⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲙ̀ⲙⲁⲩⲁϯ</em></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>3 m.</td><td><em>ⲙ̀ⲙⲁⲩⲁⲧϥ</em></td><td>3.</td><td><em>ⲙ̀ⲙⲁⲩⲁⲧⲟⲩ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲙ̀ⲁⲩⲁⲧⲥ</em></td><td></td><td></td>
+    </tr>
+  </table>
+  <p>Ex: <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ-ⲑⲏⲛⲟⲩ ⲙ̀ⲙⲁⲩⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «de vous seuls»<sup class="footnote">3</sup>.</p>
+  <p><em>ⲛⲁⲛⲉⲥ ⲁⲛ ⲉⲑⲣⲉ ⲡⲓⲣⲱⲙⲓ ϣⲱⲡⲓ ⲙ̀ⲙⲁⲩⲁⲧϥ</em> «il n'est pas bon que l'homme soit seul»<sup class="footnote">4</sup>.</p>
+  <p>3. <em>ⲧⲏⲣ⸗</em> «tout».</p>
+  <table>
+    <tr>
+      <th>Sing.</th><th></th><th>Pl.</th><th></th>
+    </tr>
+    <tr>
+      <td>1.</td><td><em>ⲧⲏⲣⲧ</em></td><td>1.</td><td><em>ⲧⲏⲣⲉⲛ</em></td>
+    </tr>
+    <tr>
+      <td>2 m.</td><td><em>ⲧⲏⲣⲕ</em></td><td>2.</td><td>(<em>ⲧⲏⲣⲧⲉⲛ</em>) <i>inusité</i></td>
+    </tr>
+    <tr>
+      <td>f.</td><td>(<em>ⲧⲏⲣⲓ</em>)</td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>3 m.</td><td><em>ⲧⲏⲣϥ</em></td><td>3.</td><td><em>ⲧⲏⲣⲟⲩ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲧⲏⲣⲥ</em></td><td></td><td></td>
+    </tr>
+  </table>
+  <p>Pour la 2 pl. on se sert de <em>ⲧⲏⲣⲟⲩ</em>: <em>ⲛⲉⲙⲱⲧⲉⲛ ⲧⲏⲣⲟⲩ</em> «avec vous tous»<sup class="footnote">5</sup>.</p>
+  <p><em>ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ</em> «la terre entière»<sup class="footnote">6</sup>.</p>
+  <p><em>ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ ⲧⲏⲣⲟⲩ</em> «tous les Egyptiens»<sup class="footnote">7</sup>.</p>
+  <p class="footnote">1. Luc 23, 35.</p>
+  <p class="footnote">2. Gen. 19, 15.</p>
+  <p class="footnote">3. Luc 12, 57.</p>
+  <p class="footnote">4. Gen. 2, 18.</p>
+  <p class="footnote">5. 2 Thess. 3, 16.</p>
+  <p class="footnote">6. Gen. 47, 13.</p>
+  <p class="footnote">7. Gen. 47, 23.</p>
+  <p>4. <em>ⲛ̀ⲟⲩⲁⲧ⸗</em> «de soi-même».</p>
+  <p>Ce mot, composé de <em>ⲛ̀</em> et de <em>ⲟⲩⲁⲓ</em> «un» est très rare, il n'a été trouvé que deux fois: <em>ⲛ̀ⲟⲩⲁⲧⲥ</em> «d'elle-même»<sup class="footnote">1</sup>; <em>ⲛ̀ⲟⲩⲁⲧⲟⲩ</em> «d'eux-mêmes»<sup class="footnote">2</sup>.</p>
+  <p>5. <em>ⲣⲱ</em> «même».</p>
+  <p>Ce mot est invariable et s'emploie comme <i>même</i> en français après les noms et les pronoms: <em>ⲁⲛⲟⲕ ⲣⲱ</em> «moi-même», <em>ⲛ̀ⲑⲟⲕ ⲣⲱ</em> «toi-même», <em>ⲫⲁⲓ ⲣⲱ</em> «celui-ci même», <em>ⲡⲁⲓ-ϣⲓ ⲣⲱ ⲣⲱ</em> «cette même mesure»<sup class="footnote">3</sup>.</p>
+  <p>Il s'emploie aussi adverbialement: <em>ⲙⲟⲛⲟⲛ ⲣⲱ ⲛ̀ⲑⲟϥ ⲙ̀ⲡⲉⲣⲧⲁⲥⲑⲟ ⲙ̀ⲡⲁϣⲏⲣⲓ ⲉⲙⲁⲩ</em> «seulement ne ramène pas mon fils là-bas»<sup class="footnote">4</sup>.</p>
+  <p>6. <em>ⲉⲣⲏⲟⲩ</em> «ensemble».</p>
+  <p>Ce mot doit être précédé des adjectifs possessifs du pluriel: <em>ⲛⲉⲛ-ⲉⲣⲏⲟⲩ</em>, <em>ⲛⲉⲧⲉⲛ-ⲉⲣⲏⲟⲩ</em>, <em>ⲛⲟⲩ-ⲉⲣⲏⲟⲩ</em>; <em>ⲛ̀ⲛⲟⲩⲉⲣⲏⲟⲩ</em> «à eux-mêmes, entr'eux»<sup class="footnote">5</sup>; <em>ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ</em> «entr'eux»<sup class="footnote">6</sup>; <em>ⲛⲉⲙ ⲛⲉⲛⲉⲣⲏⲟⲩ</em> «entre nous»<sup class="footnote">7</sup>.</p>
+  <p class="footnote">1. Act. 12, 10.</p>
+  <p class="footnote">2. Lév. 25, 5.</p>
+  <p class="footnote">3. Ex. 36, 9.</p>
+  <p class="footnote">4. Gen. 24, 8.</p>
+  <p class="footnote">5. Jean 11, 56.</p>
+  <p class="footnote">6. Luc 22, 23.</p>
+  <p class="footnote">7. Z. 29.</p>
+  <hr>
 </div>
 	</body>
 </html>
