--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1250,6 +1250,8 @@
   <p class="footnote">6. Luc 22, 23.</p>
   <p class="footnote">7. Z. 29.</p>
   <hr>
+  <h2>Chapitre III. Adjectifs et Pronoms Possessifs.</h2>
+  <p>Les adjectifs et pronoms possessifs sont formés de l'article et des pronoms personnels affixes.</p>
 </div>
 	</body>
 </html>
