--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1295,6 +1295,104 @@
     <p><i>Syntaxe.</i></p>
     <p>1. L'article détermine l'objet <i>possédé</i> et s'accorde avec lui; l'affixe indique le <i>possesseur</i> et s'accorde avec lui: <em>ⲡⲁ-ⲏⲓ</em> «ma maison», <em>ⲛⲁ-ⲓⲟϯ</em> «mes pères», <em>ⲧⲉⲕ-ⲙⲁⲩ</em> «ta mère», <em>ⲛⲉⲛ-ⲓⲟϯ</em> «nos pères».</p>
     <p>2. Quand l'objet possédé est indéterminé, au lieu des formes précédentes, on emploie l'article indéfini avec la particule du génitif <em>ⲛ̀ⲧⲉ- ⲛ̀ⲧ⸗</em>: <em>ⲟⲩ-ⲏⲓ ⲛ̀ⲧⲁϥ</em> «une maison à lui <em>بيتٌ لهُ</em>» tandis que <em>ⲡⲉϥ-ⲏⲓ</em> signifie «sa maison <em>بيته</em>».</p>
+    <p><em>ⲁⲛⲟⲕ ⲟⲩϭⲣⲟⲙⲡⲓ ⲛ̀ⲧⲁⲕ</em> «je suis une de tes colombes»<sup class="footnote">1</sup>.</p>
+    <p>Cette manière de s'exprimer s'emploie parfois même avec l'article défini et toujours avec les expressions qui ne peuvent pas recevoir les affixes:</p>
+    <p><em>ⲡⲓⲱⲙⲥ ⲛ̀ⲧⲁϥ</em> «son baptême»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲛⲏ ⲉⲑⲟⲩⲁⲃ ⲛ̀ⲧⲁⲕ</em> «tes saints»<sup class="footnote">3</sup>.</p>
+    <p>3. L'adjectif possessif s'emploie devant les noms de nombre pour indiquer l'ordre des jours, sans que le mot «jour» soit exprimé:</p>
+    <p><em>ⲡⲉϥϣⲟⲙⲧ</em> «le troisième jour».</p>
+    <p><em>ⲁⲛⲓ … ⲉ ⲧⲣⲱⲁⲥ ⲙ̀ⲡⲉⲛⲉ̅</em> «nous arrivâmes à Troas le cinquième jour»<sup class="footnote">4</sup>.</p>
+    <p>De même <em>ⲉ-ⲡⲉϥ-ⲣⲁⲥϯ</em> «le lendemain».</p>
+    <p>On doit toujours employer l'adjectif possessif formé de <em>ⲡ</em> et le faire accorder avec le sujet du verbe; <em>ⲡⲉϥ-ⲣⲁⲥϯ</em> «lendemain» est invariable parce que <em>ϥ</em> se rapporte au mot <em>ⲉϩⲟⲟⲩ</em> «jour» sous-entendu.</p>
+    <p>4. L'adjectif possessif ne s'emploie pas devant les noms qui ne reçoivent pas l'article (54); le rapport de possession est indiqué dans ces mots par les pronoms suffixes, comme en arabe:</p>
+    <p><em>ⲣⲱ-ⲓ</em> <em>فمي</em> ma bouche,</p>
+    <p><em>ⲣⲁⲧ-ϥ</em> <em>رجله</em> son pied,</p>
+    <p><em>ϩⲣⲁ-ⲕ</em> <em>وجهك</em> ta face,</p>
+    <p><em>ⲧⲟⲧ-ⲥ</em> <em>يدها</em> sa main.</p>
+    <p><i>Suffixation à ces noms.</i></p>
+    <p>I. Noms terminés par une vovelle: <em>ϫⲱ⸗</em> «tête».</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ϫⲱⲓ</em></td><td>1.</td><td><em>ϫⲱⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ϫⲱⲕ</em></td><td>2.</td><td><em>ϫⲱⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϫⲱ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ϫⲱϥ</em></td><td>3.</td><td><em>ϫⲱⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϫⲱⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p class="footnote">1. OSE. 114.</p>
+    <p class="footnote">2. Mt. 3, 7.</p>
+    <p class="footnote">3. Th. 129.</p>
+    <p class="footnote">4. Act. 20, 6.</p>
+    <p>De même <em>ⲣⲱ⸗</em> «bouche» et <em>ϩⲑⲏ⸗</em> «cœur».</p>
+    <p>2. Noms terminés par une consonne:</p>
+    <table>
+      <tr>
+        <th></th><th></th><th>par <em>ⲧ</em>: <em>ⲣⲁⲧ⸗</em> «pied»;</th><th>par <em>ⲛ</em>: <em>ⲣⲉⲛ⸗</em> «nom».</th>
+      </tr>
+      <tr>
+        <td>Sing.</td><td>1.</td><td><em>ⲣⲁⲧ</em></td><td><em>ⲣⲉⲛⲧ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>2 m.</td><td><em>ⲣⲁⲧⲕ</em></td><td><em>ⲣⲉⲛⲕ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>f.</td><td><em>ⲣⲁϯ</em></td><td><em>ⲣⲉⲛⲓ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>3 m.</td><td><em>ⲣⲁⲧϥ</em></td><td><em>ⲣⲉⲛϥ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>f.</td><td><em>ⲣⲁⲧⲥ</em></td><td><em>ⲣⲉⲛⲥ</em></td>
+      </tr>
+      <tr>
+        <td>Pl.</td><td>1.</td><td><em>ⲣⲁⲧⲉⲛ</em></td><td><em>ⲣⲉⲛⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>2.</td><td><em>ⲣⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em></td><td><em>ⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>3.</td><td><em>ⲣⲁⲧⲟⲩ</em></td><td><em>ⲣⲉⲛⲟⲩ</em></td>
+      </tr>
+    </table>
+    <p>Sur <em>ⲣⲁⲧ⸗</em> se modèlent tous les mots terminés par <em>ⲧ</em>: <em>ⲓⲁⲧ⸗</em>, <em>ⲧⲟⲧ⸗</em>, <em>ϧⲏⲧ⸗</em>, <em>ϩⲏⲧ⸗</em>; sur <em>ⲣⲉⲛ⸗</em>, les mots en <em>ⲛ</em>: <em>ⲕⲉⲛ⸗</em>, <em>ⲥⲟⲩⲉⲛ⸗</em>, de même que <em>ⲁⲩⲣⲏϫ⸗</em>.</p>
+    <p>Dans le mot <em>ϩⲣ⸗</em> la voyelle formative se place entre le radical et les suffixes comme il suit:</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ϩⲣⲏⲓ</em></td><td>1.</td><td><em>ϩⲣⲁⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ϩⲣⲁⲕ</em></td><td>2.</td><td><em>ϩⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϩⲣⲉ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ϩⲣⲁϥ</em></td><td>3.</td><td><em>ϩⲣⲁⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϩⲣⲁⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p><i>Règles et remarques.</i></p>
+    <p>1. Le suffix de la 1 sg. est <em>ⲓ</em> après une voyelle, <em>ⲧ</em> après une consonne; mais lorsque le mot est déjà terminé par <em>ⲧ</em>, on n'ajoute pas un second <em>ⲧ</em>, <em>ⲣⲁⲧ</em> (et non <em>ⲣⲁⲧⲧ</em>) «mon pied».</p>
+    <p>2. La 2 f. sg. ne prend rien après une voyelle, elle prend <em>ⲓ</em> après une consonne (<em>ⲣⲁϯ</em> = <em>ⲣⲁⲧ-ⲓ</em>).</p>
+    <p>3. Lorsque le mot terminé par une consonne a la voyelle formative après le radical, comme <em>ϩⲣ⸗</em>, la 1 sg. est toujours en <em>ⲏⲓ</em> et la 2 f. sg. en <em>ⲉ</em>.</p>
+    <p>4. Lorsque par suite du <em>ⲧ</em> radical (<em>ⲣⲁⲧ</em>) la 1 pl. est en <em>ⲧⲉⲛ</em>, la 2 pl. peut avoir deux formes:</p>
   </div>
 </div>
 	</body>
