--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1393,6 +1393,8 @@
     <p>2. La 2 f. sg. ne prend rien après une voyelle, elle prend <em>ⲓ</em> après une consonne (<em>ⲣⲁϯ</em> = <em>ⲣⲁⲧ-ⲓ</em>).</p>
     <p>3. Lorsque le mot terminé par une consonne a la voyelle formative après le radical, comme <em>ϩⲣ⸗</em>, la 1 sg. est toujours en <em>ⲏⲓ</em> et la 2 f. sg. en <em>ⲉ</em>.</p>
     <p>4. Lorsque par suite du <em>ⲧ</em> radical (<em>ⲣⲁⲧ</em>) la 1 pl. est en <em>ⲧⲉⲛ</em>, la 2 pl. peut avoir deux formes:</p>
+    <p>a) Si le mot n'a pas de forme abrégée, comme <em>ⲣⲁⲧ</em>, on ajoute <em>ⲑⲏⲛⲟⲩ</em> à la 1 pl.: <em>ⲣⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre pied» au lieu de <em>ⲣⲁⲧ-ⲧⲉⲛ</em>.</p>
+    <p>b) Si le mot a une forme abrégée, comme <em>ⲧⲟⲧ⸗</em> dans <em>ϩⲓ-ⲧⲉⲛ</em> (57), on ajoute <em>ⲑⲏⲛⲟⲩ</em> à cette dernière forme: <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «de vous»<sup class="footnote">1</sup>.</p>
   </div>
 </div>
 	</body>
