--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1395,6 +1395,69 @@
     <p>4. Lorsque par suite du <em>ⲧ</em> radical (<em>ⲣⲁⲧ</em>) la 1 pl. est en <em>ⲧⲉⲛ</em>, la 2 pl. peut avoir deux formes:</p>
     <p>a) Si le mot n'a pas de forme abrégée, comme <em>ⲣⲁⲧ</em>, on ajoute <em>ⲑⲏⲛⲟⲩ</em> à la 1 pl.: <em>ⲣⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre pied» au lieu de <em>ⲣⲁⲧ-ⲧⲉⲛ</em>.</p>
     <p>b) Si le mot a une forme abrégée, comme <em>ⲧⲟⲧ⸗</em> dans <em>ϩⲓ-ⲧⲉⲛ</em> (57), on ajoute <em>ⲑⲏⲛⲟⲩ</em> à cette dernière forme: <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «de vous»<sup class="footnote">1</sup>.</p>
+    <p>En général, pour tous les mots qui ont une forme abrégée, la 2 pl. s'obtient en ajoutant <em>ⲑⲏⲛⲟⲩ</em> à cette forme:</p>
+    <p><em>ⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre nom»; <em>ϩⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre face».</p>
+    <p>Pour <em>ϫⲱ⸗</em> et ses composés on emploie les deux formes: <em>ⲉϫⲱⲧⲉⲛ</em> et <em>ⲉϫⲉⲛ-ⲑⲏⲛⲟⲩ</em> «sur vous»<sup class="footnote">2</sup>.</p>
+    <p>II Pronoms possessifs.</p>
+    <p><i>1. Formes.</i></p>
+    <p>Le pronom possessif a deux formes:</p>
+    <p>1. une forme abrégée:</p>
+    <table>
+      <tr>
+        <th>Sing. masc.</th><th>fém.</th><th>Pl.</th>
+      </tr>
+      <tr>
+        <td><em>ⲫⲁ-</em></td><td><em>ⲑⲁ-</em></td><td><em>ⲛⲁ-</em></td>
+      </tr>
+    </table>
+    <p class="footnote">1. Kef. 357.</p>
+    <p class="footnote">2. Pr. 1, 27.</p>
+    <p>2. une forme avec suffixes:</p>
+    <table>
+      <tr>
+        <th></th><th></th><th>masc. sing.</th><th>fém. sing.</th><th>pluriel</th>
+      </tr>
+      <tr>
+        <td>Sing.</td><td>1.</td><td><em>ⲫⲱⲓ</em></td><td><em>ⲑⲱⲓ</em></td><td><em>ⲛⲟⲩⲓ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>2 m.</td><td><em>ⲫⲱⲕ</em></td><td><em>ⲑⲱⲕ</em></td><td><em>ⲛⲟⲩⲕ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>f.</td><td><em>ⲫⲱ</em></td><td><em>ⲑⲱ</em></td><td><em>ⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>3 m.</td><td><em>ⲫⲱϥ</em></td><td><em>ⲑⲱϥ</em></td><td><em>ⲛⲟⲩϥ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>f.</td><td><em>ⲫⲱⲥ</em></td><td><em>ⲑⲱⲥ</em></td><td><em>ⲛⲟⲩⲥ</em></td>
+      </tr>
+      <tr>
+        <td>Plur.</td><td>1.</td><td><em>ⲫⲱⲛ</em></td><td><em>ⲑⲱⲛ</em></td><td><em>ⲛⲟⲩⲛ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>2.</td><td><em>ⲫⲱⲧⲉⲛ</em></td><td><em>ⲑⲱⲧⲉⲛ</em></td><td><em>ⲛⲟⲩⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>3.</td><td><em>ⲫⲱⲟⲩ</em></td><td><em>ⲑⲱⲟⲩ</em></td><td><em>ⲛⲟⲩⲟⲩ</em></td>
+      </tr>
+    </table>
+    <p>En Ṣaꜥidique les formes sont les mêmes, mais avec <em>ⲡ</em> et <em>ⲧ</em>, au lieu des aspirées <em>ⲫ</em> <em>ⲑ</em> (24).</p>
+    <p><i>2. Sens.</i></p>
+    <p>La forme abrégée <em>ⲫⲁ-</em>, <em>ⲑⲁ-</em>, <em>ⲛⲁ-</em> a deux sens:</p>
+    <p>1. Un sens <i>actif</i> «possédant, possesseur de» qui correspond un peu au français «à» et à l'arabe «<em>صاحب، ذو</em>» dans les expressions de ce genre:</p>
+    <p><em>ⲛⲓⲥⲉⲣⲁⲫⲓⲙ ⲛⲁ ⲡⲓⲋ̅ ⲛ̀ⲧⲉⲛϩ</em> «les Séraphins aux six ailes»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙⲁ ⲡⲓⲧⲁⲓⲟ ⲙ̀ⲫⲁ-ⲡⲓⲧⲁⲓⲟ</em> «donnez l'honneur au possesseur de l'honneur»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲁⲃⲃⲁ ⲍⲁⲭⲁⲣⲓⲁⲥ ⲫⲁ-ⲡⲓⲉⲣⲫⲙⲉⲩⲓ ⲉⲑⲛⲁⲛⲉϥ</em> «l'abbé Zacharias de bonne mémoire»<sup class="footnote">3</sup>.</p>
+    <p>2. Un sens <i>passif</i> qui convient aussi à la forme avec suffixes, «appartenant à, possession de»:</p>
+    <p class="footnote">1. Br. 282.</p>
+    <p class="footnote">2. Rom. 13, 7.</p>
+    <p class="footnote">3. Isaac 10.</p>
+    <p><em>ⲡⲓⲕⲁϩⲓ ⲫⲁ-ⲡϭⲟⲓⲥ ⲡⲉ</em> «la terre est au Seigneur»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲑⲱⲕ ⲧⲉ ϯϫⲟⲙ ⲛⲉⲙ ⲡⲓⲱⲟⲩ</em> «à toi appartient la force et la gloire»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲫⲱⲓ ⲡⲉ ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ</em> «à moi appartient toute la terre»<sup class="footnote">3</sup>.</p>
+    <p><i>3. Syntaxe.</i></p>
+    <p>1. Le pron. possessif, comme son nom l'indique, évite la répétition du nom du possesseur et équivaut au français «celui de, celle de, ceux de» ou «le mien, le tien, etc.»:</p>
   </div>
 </div>
 	</body>
