--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1398,7 +1398,7 @@
     <p>En général, pour tous les mots qui ont une forme abrégée, la 2 pl. s'obtient en ajoutant <em>ⲑⲏⲛⲟⲩ</em> à cette forme:</p>
     <p><em>ⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre nom»; <em>ϩⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre face».</p>
     <p>Pour <em>ϫⲱ⸗</em> et ses composés on emploie les deux formes: <em>ⲉϫⲱⲧⲉⲛ</em> et <em>ⲉϫⲉⲛ-ⲑⲏⲛⲟⲩ</em> «sur vous»<sup class="footnote">2</sup>.</p>
-    <p>II Pronoms possessifs.</p>
+    <p>II. Pronoms possessifs.</p>
     <p><i>1. Formes.</i></p>
     <p>Le pronom possessif a deux formes:</p>
     <p>1. une forme abrégée:</p>
@@ -1458,6 +1458,33 @@
     <p><em>ⲫⲱⲓ ⲡⲉ ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ</em> «à moi appartient toute la terre»<sup class="footnote">3</sup>.</p>
     <p><i>3. Syntaxe.</i></p>
     <p>1. Le pron. possessif, comme son nom l'indique, évite la répétition du nom du possesseur et équivaut au français «celui de, celle de, ceux de» ou «le mien, le tien, etc.»:</p>
+    <p><em>ⲡⲉϥⲱⲟⲩ ⲛⲉⲙ ⲫⲁ-ⲡⲉϥⲓⲱⲧ</em> «sa gloire et celle de son Père»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲛⲁⲓⲁⲗⲱⲙ ⲛⲁ-ⲡⲓⲙⲁⲛⲉⲥⲱⲟⲩ ⲛⲉ</em> «ces fromages sont ceux du berger»<sup class="footnote">5</sup>.</p>
+    <p>2. Le pronom abrégé <em>ⲫⲁ-</em>, <em>ⲑⲁ-</em>, <em>ⲛⲁ-</em> forme avec les substantifs des composés comme:</p>
+    <p><em>ⲫⲁ-ⲡⲓⲣⲟ</em> «celui de la porte = le portier».</p>
+    <p><em>ⲛⲁ-ⲧⲫⲉ ⲛⲉⲙ ⲛⲁ-ⲡⲕⲁϩⲓ</em> «les habitants du ciel et ceux de la terre»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲛⲁ-ϯⲧⲁⲝⲓⲥ</em> «ceux de l'ordre = les gardes»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲛⲁ-ⲧϩⲏ</em> «l'avenir»; <em>ⲛⲁ-ⲫⲁϩⲟⲩ</em> «le passé».</p>
+    <p>Les aspirées <em>ⲫ</em> <em>ⲑ</em> sont parfois remplacées par les fortes <em>ⲡ</em> <em>ⲧ</em> comme dans le dialecte ṣaꜥidique:</p>
+    <p><em>ⲧⲁ-ⲫⲙⲏⲓ</em> «véritable»; <em>ⲧⲁ-ⲫⲣⲟ</em> «la bouche».</p>
+    <p><em>ⲡⲁ-ⲭⲱⲛ</em> ou <em>ⲡⲁ-ϣⲟⲛⲥ</em> (le mois du dieu Chons) «Pachons».</p>
+    <p>3. On emploie souvent le pron. poss. après les relatifs démonstratifs <em>ⲫⲏ ⲉⲧⲉ</em>, <em>ⲑⲏ ⲉⲧⲉ</em>, <em>ⲛⲏ ⲉⲧⲉ</em> (97) en lui rattachant, au moyen de <em>ⲛ</em>, le nom de l'objet possédé:</p>
+    <p class="footnote">1. Ps. 23, 1.</p>
+    <p class="footnote">2. Guide de la Semaine sainte 38.</p>
+    <p class="footnote">3. Ex. 19, 5.</p>
+    <p class="footnote">4. Luc 9, 26.</p>
+    <p class="footnote">5. Kef. 385.</p>
+    <p class="footnote">6. Th. 261.</p>
+    <p class="footnote">7. IT. 99.</p>
+    <p><em>ⲫⲏ ⲉⲧⲉ ⲫⲱϥ ⲛ̀ⲓⲱⲧ</em> «celui qui est à lui en Père, <i>c.-à-d.</i> son Père»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲛⲏ ⲉⲧⲉ ⲛⲟⲩϥ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «ses disciples»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲙ̀ⲙⲟⲛ ⲟⲩⲡⲣⲟⲫⲏⲧⲏⲥ ⲉϥⲧⲁⲓⲏⲟⲩⲧ ϧⲉⲛ ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲃⲁⲕⲓ</em> «aucun prophète n'est honoré dans sa propre ville»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲯⲩⲭⲏ</em> «son âme»<sup class="footnote">4</sup>.</p>
+    <p class="footnote">1. Missel 108.</p>
+    <p class="footnote">2. Missel 110.</p>
+    <p class="footnote">3. Jean 4, 44.</p>
+    <p class="footnote">4. Lév. 27, 2.</p>
+    <p class="footnote">5. Mt. 3, 17.</p>
   </div>
 </div>
 	</body>
