--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1480,11 +1480,48 @@
     <p><em>ⲛⲏ ⲉⲧⲉ ⲛⲟⲩϥ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «ses disciples»<sup class="footnote">2</sup>.</p>
     <p><em>ⲙ̀ⲙⲟⲛ ⲟⲩⲡⲣⲟⲫⲏⲧⲏⲥ ⲉϥⲧⲁⲓⲏⲟⲩⲧ ϧⲉⲛ ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲃⲁⲕⲓ</em> «aucun prophète n'est honoré dans sa propre ville»<sup class="footnote">3</sup>.</p>
     <p><em>ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲯⲩⲭⲏ</em> «son âme»<sup class="footnote">4</sup>.</p>
+    <p>Chapitre IV.</p>
+    <p>Adjectifs et Pronoms Démonstratifs.</p>
+    <p>I. Pour les objets rapprochés.</p>
+    <p><i>1. Adjectifs.</i></p>
+    <p>Sing. masc. <em>ⲡⲁⲓ-</em> «ce», fém. <em>ⲧⲁⲓ-</em> «cette», pl. <em>ⲛⲁⲓ-</em> «ces».</p>
+    <p><i>2. Pronoms.</i></p>
+    <p>Sing. masc. <em>ⲫⲁⲓ</em> «celui-ci», fém. <em>ⲑⲁⲓ</em> «celle-ci», pl. <em>ⲛⲁⲓ</em> «ceux-ci».</p>
+    <p><em>ⲫⲁⲓ ⲡⲉ ⲡⲁϣⲏⲣⲓ</em> «celui-ci est mon fils»<sup class="footnote">5</sup>;</p>
+    <p><em>ⲡⲁⲓ-ⲉϩⲟⲟⲩ</em> «ce jour»;</p>
+    <p><em>ⲧⲁⲓⲣⲟⲙⲡⲓ</em> «cette année»;</p>
+    <p><em>ⲛⲁⲓⲣⲱⲙⲓ</em> «ces hommes»;</p>
+    <p><em>ⲛⲁⲓϩⲓⲟⲙⲓ</em> «ces femmes».</p>
     <p class="footnote">1. Missel 108.</p>
     <p class="footnote">2. Missel 110.</p>
     <p class="footnote">3. Jean 4, 44.</p>
     <p class="footnote">4. Lév. 27, 2.</p>
     <p class="footnote">5. Mt. 3, 17.</p>
+    <p>Le pronom <em>ⲫⲁⲓ</em> <em>ⲑⲁⲓ</em> <em>ⲛⲁⲓ</em> s'emploie souvent après un nom pour renforcer le sens de l'adjectif poss. ou démonstratif:</p>
+    <p><em>ⲡⲁϣⲏⲣⲓ ⲫⲁⲓ</em> «mon fils que voici»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲡⲁⲓⲉϩⲟⲟⲩ ⲫⲁⲓ</em> «ce jour-ci»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲫⲁⲓ</em> et <em>ⲛⲁⲓ</em>remplacent le neutre des autres langues:</p>
+    <p><em>ⲉⲑⲃⲉ ⲫⲁⲓ</em> «à cause de cela»,</p>
+    <p><em>ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ</em> «après ces choses»,</p>
+    <p><em>ⲛⲁⲓ ⲉϥϫⲱ ⲙ̀ⲙⲱⲟⲩ</em> «disant ces choses»<sup class="footnote">3</sup>.</p>
+    <p>II. Pour les objets éloignés.</p>
+    <p><i>1. Pronoms.</i></p>
+    <p>Sing. masc. <em>ⲫⲏ</em> «celui-là», fém. <em>ⲑⲏ</em> «celle-là»; pl. <em>ⲛⲏ</em> «ceux-là, celles-là».</p>
+    <p><i>2. L'adjectif</i> ne s'est pas conservé; quand on veut indiquer expressément des objets éloignés on se sert de deux expressions invariables: <em>ⲉⲧⲧⲏ</em>, <em>ⲉⲧⲉⲙⲙⲁⲩ</em> composées du relatif <em>ⲉⲧ</em> et des adverbes <em>ⲧⲏ</em>, <em>ⲙ̀ⲙⲁⲩ</em> «là, là-bas» (20). Le substantif prend l'article:</p>
+    <p><em>ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲧⲏ</em> «ce jour-là»<sup class="footnote">4</sup>;</p>
+    <p><em>ϧⲉⲛ ⲡⲓⲥⲏⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ</em> «en ce temps-là»<sup class="footnote">5</sup>.</p>
+    <p>Quand le substantif est accompagné d'un qualificatif, on le place avant ou après l'adverbe:</p>
+    <p class="footnote">1. Luc 15, 24.</p>
+    <p class="footnote">2. Th. 153.</p>
+    <p class="footnote">3. Jean 8, 30.</p>
+    <p class="footnote">4. Mt. 26, 29.</p>
+    <p class="footnote">5. Mt. 14, 1.</p>
+    <p><em>ϯⲧⲫⲱ ⲉⲧϩⲟⲣϣ ⲉⲧⲉⲙⲙⲁⲩ</em> «ce lourd fardeau-là»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲡⲓⲟⲩⲏⲃ ⲉⲧⲉⲙⲙⲁⲩ ⲛ̀ⲁⲕⲁⲑⲁⲣⲧⲟⲥ</em> «ce prêtre impur»<sup class="footnote">2</sup>.</p>
+    <p>Le pronom peut aussi être renforcé par <em>ⲉⲧⲉⲙⲙⲁⲩ</em>: <em>ⲫⲏ ⲉⲧⲉⲙⲙⲁⲩ</em> «celui-là».</p>
+    <p>Pronom relatif.</p>
+    <p>Le pronom relatif a trois formes qui conviennent à tous les genres et à tous les nombres: <em>ⲉ</em>, <em>ⲉⲧ</em>, <em>ⲉⲧⲉ</em>.</p>
+    <p>Ce pronom s'unit aux démonstratifs <em>ⲫⲏ</em>, <em>ⲑⲏ</em>, <em>ⲛⲏ</em> pour former les composés suivants appelés relatifs démonstratifs:</p>
   </div>
 </div>
 	</body>
