--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1522,6 +1522,17 @@
     <p>Pronom relatif.</p>
     <p>Le pronom relatif a trois formes qui conviennent à tous les genres et à tous les nombres: <em>ⲉ</em>, <em>ⲉⲧ</em>, <em>ⲉⲧⲉ</em>.</p>
     <p>Ce pronom s'unit aux démonstratifs <em>ⲫⲏ</em>, <em>ⲑⲏ</em>, <em>ⲛⲏ</em> pour former les composés suivants appelés relatifs démonstratifs:</p>
+    <table>
+      <tr>
+        <td>Sing.</td><td>masc.</td><td><em>ⲫⲏ ⲉ</em></td><td><em>ⲫⲏ ⲉⲧ</em></td><td><em>ⲫⲏ ⲉⲧⲉ</em></td><td>«celui qui»;</td>
+      </tr>
+      <tr>
+        <td></td><td>fém.</td><td><em>ⲑⲏ ⲉ</em></td><td><em>ⲑⲏ ⲉⲧ</em></td><td><em>ⲑⲏ ⲉⲧⲉ</em></td><td>«celle qui»;</td>
+      </tr>
+      <tr>
+        <td>Pluriel</td><td></td><td><em>ⲛⲏ ⲉ</em></td><td><em>ⲛⲏ ⲉⲧ</em></td><td><em>ⲛⲏ ⲉⲧⲉ</em></td><td>«ceux qui».</td>
+      </tr>
+    </table>
   </div>
 </div>
 	</body>
