--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1533,6 +1533,23 @@
         <td>Pluriel</td><td></td><td><em>ⲛⲏ ⲉ</em></td><td><em>ⲛⲏ ⲉⲧ</em></td><td><em>ⲛⲏ ⲉⲧⲉ</em></td><td>«ceux qui».</td>
       </tr>
     </table>
+    <p>Ces pronoms forment avec les verbes (spécialement avec le qualitatif) et les constructions prépositives des propositions nominales qui équivalent à un nom et en remplissent toutes les fonctions (sujet, régime):</p>
+    <p><em>ⲫⲏ ⲉⲑⲟⲩⲁⲃ</em> «celui qui (est) saint = le saint»;</p>
+    <p><em>ⲛⲏ ⲉⲑⲙⲱⲟⲩⲧ</em> «ceux qui (sont) morts = les morts»;</p>
+    <p><em>ⲛⲏ ⲉⲧⲥⲁϧⲟⲩⲛ</em> «les choses qui sont dedans, les entrailles».</p>
+    <p>Le pronom relatif s'unit aussi à l'article:</p>
+    <p>Sing. <em>ⲡⲉⲧ</em>, <em>ⲡⲉⲧⲉ</em> «celui qui, ce qui»;</p>
+    <p>Plur. <em>ⲛⲉⲧ</em>, <em>ⲛⲉⲧⲉ</em> «ceux qui, les choses qui».</p>
+    <p>Ces pronoms s'emploient généralement pour les choses, rarement pour les personnes:</p>
+    <p class="footnote">1. Kef. 416.</p>
+    <p class="footnote">2. MS. 425.</p>
+    <p><em>ⲡⲉⲑ-ⲟⲩⲁⲃ</em> «ce qui est saint» ou «le saint»<sup class="footnote">1</sup>;</p>
+    <p><em>ⲡⲉⲧ-ϩⲱⲟⲩ</em> «ce qui est mal = le mal»;</p>
+    <p><em>ⲡⲉⲧ-ϩⲏⲡ</em> «ce qui est caché»;</p>
+    <p><em>ⲡⲉⲧⲉⲕⲛⲁⲁⲓⲥ</em> «ce que tu feras»<sup class="footnote">2</sup>.</p>
+    <p>Ces mots composés peuvent encore être déterminés par l'article:</p>
+    <p><em>ⲡⲓ-ⲡⲉⲧϩⲱⲟⲩ</em> «le mal»; <em>ϩⲁⲛ-ⲡⲉⲧϩⲱⲟⲩ</em> «des maux»<sup class="footnote">3</sup>.</p>
+    <p>Pour l'emploi du pronom relatif et la différence entre <em>ⲉ</em>, <em>ⲉⲧ</em>, <em>ⲉⲧⲉ</em>, voir la proposition relative (378).</p>
   </div>
 </div>
 	</body>
