--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1550,6 +1550,20 @@
     <p>Ces mots composés peuvent encore être déterminés par l'article:</p>
     <p><em>ⲡⲓ-ⲡⲉⲧϩⲱⲟⲩ</em> «le mal»; <em>ϩⲁⲛ-ⲡⲉⲧϩⲱⲟⲩ</em> «des maux»<sup class="footnote">3</sup>.</p>
     <p>Pour l'emploi du pronom relatif et la différence entre <em>ⲉ</em>, <em>ⲉⲧ</em>, <em>ⲉⲧⲉ</em>, voir la proposition relative (378).</p>
+    <p>Chapitre V.</p>
+    <p>I. Pronoms Interrogatifs.</p>
+    <p>1. <em>ⲁϣ</em> quel? quelle?</p>
+    <p>2. <em>ⲛⲓⲙ</em> qui? quel?</p>
+    <p>3. <em>ⲟⲩ</em> quoi?</p>
+    <p>4. <em>ⲟⲩⲏⲣ</em> combien?</p>
+    <p>5. <em>ⲁϧⲟ⸗</em> pourquoi?</p>
+    <p>Excepté <em>ⲁϧⲟ⸗</em> <i>forme avec suffixes</i>, tous ces mots sont invariables et s'emploient de deux manières: <i>substantivement</i> et <i>adjectivement</i>, c.-à-d. comme déterminatifs d'un substantif auquel ils s'unissent au moyen de <em>ⲛ̀</em>:</p>
+    <p><i>Subst.</i> <em>ⲛⲓⲙ ⲉⲧⲟⲛⲓ ⲙ̀ⲙⲟⲕ</em> «qui est semblable à toi?»<sup class="footnote">4</sup>.</p>
+    <p><i>Adjec.</i> <em>ⲁϣ ⲛ̀-ⲣⲏϯ</em> «quelle manière?».</p>
+    <p class="footnote">1. MS. 421.</p>
+    <p class="footnote">2. Gen. 19, 19.</p>
+    <p class="footnote">3. Pr. 1, 18.</p>
+    <p class="footnote">4. Ex. 15, 11.</p>
   </div>
 </div>
 	</body>
