--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1564,6 +1564,61 @@
     <p class="footnote">2. Gen. 19, 19.</p>
     <p class="footnote">3. Pr. 1, 18.</p>
     <p class="footnote">4. Ex. 15, 11.</p>
+    <p><em>ⲁϣ</em> désigne les personnes et les choses:</p>
+    <p><em>ⲁϣ ⲡⲉ ⲡⲁⲓⲧⲓⲙⲏ ⲫⲁⲓ</em> «quel est ce village?»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲛ̀ⲑⲟⲕ ⲫⲁ-ⲁϣ ⲛ̀ⲑⲟϣ</em> «de quel nome es-tu?»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲟⲩⲁϣ ⲛ̀ⲣⲏϯ ⲡⲉ ⲡⲓⲕⲁϩⲓ</em> «quel est l'état de la terre?»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲛⲓⲙ</em> ne remplace que les personnes:</p>
+    <p><em>ⲟⲩⲥϩⲓⲙⲓ ⲛ̀ϫⲱⲣⲓ ⲛⲓⲙ ⲉⲑⲛⲁϫⲉⲙⲥ</em> «la femme forte, qui la trouvera?»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲛ̀ⲑⲟ ⲧϣⲉⲣⲓ ⲛ̀ⲛⲓⲙ</em> «de qui es-tu fille?»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲛⲓⲙ ⲛ̀ⲣⲱⲙⲓ</em> «quel homme?».</p>
+    <p><em>ⲟⲩ</em> ne s'emploie que pour les choses, il se met avant ou après le mot auquel il se rapporte:</p>
+    <p><em>ⲟⲩ ⲡⲉ ϯⲙⲉⲑⲙⲏⲓ</em> «qu'est-ce que la vérité?»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲛⲉⲕϣⲓⲛⲓ ϩⲁⲛ-ⲟⲩ ⲛⲉ</em> «quelles sont tes nouvelles?»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲟⲩ ⲙ̀ⲙⲏⲓⲛⲓ</em> «quel prodige?»<sup class="footnote">8</sup>.</p>
+    <p><em>ⲁⲕⲕⲱϯ ⲛ̀ⲥⲁ ⲟⲩ</em> «que cherches-tu?»<sup class="footnote">9</sup>.</p>
+    <p>Avec le verbe <em>ⲉⲣ</em> «faire», <em>ⲟⲩ</em> forme le composé <em>ⲉⲣⲟⲩ</em> qui est toujours suivi du datif <em>ⲛ⸗</em> et signifie «qu'importe à? que sert à?», en arabe <em>ما لِ</em>:</p>
+    <p><em>ⲉⲣⲟⲩ ⲛⲏⲓ ⲙ̀ⲫⲁⲓ</em> «qu'est-ce que cela me fait?»<sup class="footnote">10</sup>.</p>
+    <p><em>ⲟⲩⲏⲣ</em> désigne les personnes et les choses:</p>
+    <p><em>ⲟⲩⲏⲣ ⲛⲉ ⲛⲓⲣⲟⲙⲡⲓ ⲛ̀ⲉϩⲟⲟⲩ ⲛ̀ⲧⲉ ⲡⲉⲕⲱⲛϧ</em> quel âge as-tu? <i>Littér.</i> quot sunt anni dierum vitæ tuæ?»<sup class="footnote">11</sup>.</p>
+    <p><em>ⲟⲩⲟⲛⲧⲉⲧⲉⲛ ⲟⲩⲏⲣ ⲛ̀ⲱⲓⲕ ⲙ̀ⲙⲁⲩ</em> «combien avez-vous de pains?»<sup class="footnote">12</sup>.</p>
+    <p class="footnote">1. AM. 95.</p>
+    <p class="footnote">2. Kef. 406.</p>
+    <p class="footnote">3. Nomb. 13, 19.</p>
+    <p class="footnote">4. Pr. 31, 10.</p>
+    <p class="footnote">5. Gen. 24, 23.</p>
+    <p class="footnote">6. Jean 18, 38.</p>
+    <p class="footnote">7. D. 544.</p>
+    <p class="footnote">8. Jean 2, 18.</p>
+    <p class="footnote">9. Jean 4, 27.</p>
+    <p class="footnote">10. Gen. 15, 22.</p>
+    <p class="footnote">11. Gen. 47, 8.</p>
+    <p class="footnote">12. Mt. 15, 34.</p>
+    <p><em>ⲁϧⲟ⸗</em> (<em>ما بال</em>) «pourquoi?» (S. <em>ⲁϩⲣⲟ⸗</em>).</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲁϧⲟⲓ</em></td><td>1.</td><td><em>ⲁϧⲟⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲁϧⲟⲕ</em></td><td>2.</td><td><em>ⲁϧⲱⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲁϧⲟ</em></td><td></td><td><em></em></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲁϧⲟϥ</em></td><td>3.</td><td><em>ⲁϧⲱⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲁϧⲟⲥ</em></td><td></td><td><em></em></td>
+      </tr>
+    </table>
+    <p><em>ϯⲥϩⲓⲙⲓ ⲁϧⲟ ⲧⲉⲣⲓⲙⲓ</em> «femme, pourquoi pleures-tu?»<sup class="footnote">1</sup>.</p>
+    <p>Il a aussi le sens de «qu'importe?» (<em>ما لِ</em>):</p>
+    <p><em>ⲁϧⲟⲕ ⲛⲉⲙⲁⲛ ⲡϣⲏⲣⲓ ⲙ̀ⲫϯ</em> <em>ما انا ولكَ ابن الله</em> «qu'y a-t-il entre toi et nous, Fils de Dieu?»<sup class="footnote">2</sup>.</p>
+    <p>II. Pronoms Indéfinis.</p>
   </div>
 </div>
 	</body>
