--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1619,6 +1619,26 @@
     <p>Il a aussi le sens de «qu'importe?» (<em>ما لِ</em>):</p>
     <p><em>ⲁϧⲟⲕ ⲛⲉⲙⲁⲛ ⲡϣⲏⲣⲓ ⲙ̀ⲫϯ</em> <em>ما انا ولكَ ابن الله</em> «qu'y a-t-il entre toi et nous, Fils de Dieu?»<sup class="footnote">2</sup>.</p>
     <p>II. Pronoms Indéfinis.</p>
+    <p>1. <em>ⲟⲩⲁⲓ</em>, <i>fém.</i> <em>ⲟⲩⲓ</em> un, une.</p>
+    <p>2. <em>ⲟⲩⲟⲛ</em> quelqu'un.</p>
+    <p>3. <em>ϩⲗⲓ</em> aucun, rien.</p>
+    <p>4. <em>ⲛⲓⲙ</em> un tel.</p>
+    <p>5. <em>ⲕⲉ</em> autre, aussi.</p>
+    <p>6. <em>ⲭⲉⲧ</em>, <i>fém.</i> <em>ⲭⲉϯ</em> autre.</p>
+    <p>7. <em>ⲕⲉⲭⲱⲟⲩⲛⲓ</em> <i>pl.</i> autres.</p>
+    <p>8. <em>ⲙⲏϣ</em> beaucoup.</p>
+    <p>9. <em>ⲕⲟⲩϫⲓ</em> peu.</p>
+    <p>10. <em>ϩⲟⲩⲟ</em> plus, davantage.</p>
+    <p><em>ⲟⲩⲁⲓ</em>, <i>fém.</i> <em>ⲟⲩⲓ</em> (S. <em>ⲟⲩⲁ</em>, <i>fém.</i> <em>ⲟⲩⲉⲓ</em>) s'emploie substantivement et adjectivement.</p>
+    <p><em>ⲟⲩⲁⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲙⲉⲧⲥⲛⲁⲩ</em> «un des douze»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲟⲩⲁⲓ ⲛ̀ⲛⲁⲓⲕⲟⲩϫⲓ</em> «un de ces petits»<sup class="footnote">4</sup>.</p>
+    <p>De <em>ⲟⲩⲁⲓ</em> dérive l'adjectif <em>ⲟⲩⲱⲧ</em> qui a deux sens:</p>
+    <p>1. «Unique, seul» quand son substantif a l'article <em>ⲟⲩ</em>: <em>ⲟⲩⲛⲟⲩϯ ⲛ̀ⲟⲩⲱⲧ</em> «un seul Dieu».</p>
+    <p>2. «Le même, la même» quand le substantif a l'article défini ou ses dérivés:</p>
+    <p class="footnote">1. Jean 20, 13.</p>
+    <p class="footnote">2. Mt. 8, 29.</p>
+    <p class="footnote">3. Luc 22, 47.</p>
+    <p class="footnote">4. Luc 17, 2.</p>
   </div>
 </div>
 	</body>
