--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1639,6 +1639,28 @@
     <p class="footnote">2. Mt. 8, 29.</p>
     <p class="footnote">3. Luc 22, 47.</p>
     <p class="footnote">4. Luc 17, 2.</p>
+    <p><em>ⲡⲓⲉϩⲟⲟⲩ ⲛ̀ⲟⲩⲱⲧ</em> «le même jour».</p>
+    <p><em>ⲧⲁⲓ-ⲡⲟⲗⲓⲥ ⲛ̀ⲟⲩⲱⲧ</em> «cette même ville»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲟⲩⲟⲛ</em> est toujours employé subst. et désigne les personnes: <em>ⲟⲩⲟⲛ ⲙ̀ⲙⲟⲛ</em> «quelqu'un de nous».</p>
+    <p><em>ⲕⲉⲅⲁⲣ ⲫⲓⲱⲧ ⲁϥⲕⲱϯ ⲛ̀ⲥⲁ ⲛⲁⲓ ⲟⲩⲟⲛ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲛⲏ ⲉⲑⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ</em> «car le Père cherche des personnes de cette sorte, qui l'adorent»<sup class="footnote">2</sup>.</p>
+    <p><em>ϩⲗⲓ</em> (S. <em>ⲗⲁⲁⲩ</em>) s'emploie pour les personnes et pour les choses, généralement dans une proposition négative:</p>
+    <p><em>ⲙ̀ⲡⲉⲣⲭⲁ ϩⲗⲓ ⲛ̀ⲣⲱⲙⲓ ⲉ ⲱⲗⲓ ⲙ̀ⲡⲁⲥⲱⲙⲁ</em> «ne laisse personne emporter mon corps»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲙ̀ⲡⲉϥⲥⲁϫⲓ ⲛⲉⲙ ϩⲗⲓ</em> «il ne parla à personne»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲙ̀ⲡⲉⲣϯ ϩⲗⲓ ⲉⲣⲟⲓ ⲉⲃⲏⲗ ⲉ ⲡⲓⲗⲉⲃⲓⲧⲟⲩ</em> «ne mettez sur moi rien autre chose que l'habit monacal»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲛ︤ⲓ︦ⲙ︥</em> (<em>فلان</em>), pronom indéfini<sup class="footnote">5</sup>, est généralement marqué d'un trait pour le distinguer de <em>ⲛⲓⲙ</em> interrogatif. Il s'emploie:</p>
+    <p>1. seul, substantivement, pour indiquer la place d'un nom propre:</p>
+    <p><em>ⲁⲛⲟⲕ ⲛ︤ⲓ︦ⲙ︥</em> «moi, un tel».</p>
+    <p><em>ⲁⲃⲃⲁ ⲛ︤ⲓ︦ⲙ︥</em> «l'abbé un tel», ou mieux «l'abbé N.»<sup class="footnote">6</sup>.</p>
+    <p>2. avec l'article attributif <em>ⲡⲁ</em> <em>ⲧⲁ</em> dans les deux expressions consacrées:</p>
+    <p><i>masc.</i> <em>ⲡⲁ-ⲛ︤ⲓ︦ⲙ︥</em> «celui d'un tel, c.-à-d. un tel, fils d'un tel».</p>
+    <p><i>fém.</i> <em>ⲧⲁ-ⲛ︤ⲓ︦ⲙ︥</em> «celle d'un tel ou d'une telle, c.-à-d. une telle».</p>
+    <p>Ces deux termes ont parfois le même sens que <em>ⲛ︤ⲓ︦ⲙ︥</em> «un tel, une telle», mais ils sont plus <i>déterminés</i>:</p>
+    <p class="footnote">1. Kef. 333.</p>
+    <p class="footnote">2. Jean 4, 23.</p>
+    <p class="footnote">3. Kef. 418.</p>
+    <p class="footnote">4. Kef. 419.</p>
+    <p class="footnote">5. Ce mot représente l'ancien égyptien <i>nima</i>, «qui?» Cf. <i>Revue critique</i>, 16 Sept. 1905, p. 209; <i>Sphinx</i>, IX, p. 32.</p>
+    <p class="footnote">6. Rit. 79.</p>
   </div>
 </div>
 	</body>
