--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1661,6 +1661,32 @@
     <p class="footnote">4. Kef. 419.</p>
     <p class="footnote">5. Ce mot représente l'ancien égyptien <i>nima</i>, «qui?» Cf. <i>Revue critique</i>, 16 Sept. 1905, p. 209; <i>Sphinx</i>, IX, p. 32.</p>
     <p class="footnote">6. Rit. 79.</p>
+    <p><em>ⲡⲉⲕⲃⲱⲕ ⲡⲁⲛ︤ⲓ︦ⲙ︥</em> «ton serviteur, un tel»<sup class="footnote">1</sup>.</p>
+    <p><em>ϯⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲑⲟⲩⲁⲃ ⲧⲁⲛ︤ⲓ︦ⲙ︥</em> «la sainte église, une telle».</p>
+    <p>Mais on traduira dans le premier sens:</p>
+    <p><em>ϯⲉⲕⲕⲗⲏⲥⲓⲁ ⲧⲁⲛ︤ⲓ︦ⲙ︥ ⲙ̀ⲡⲟⲗⲓⲥ</em> «l'église <i>de telle</i> ville»<sup class="footnote">2</sup>.</p>
+    <p><i>Remarques.</i></p>
+    <p>1. L'expression grecque équivalente qui se trouve dans l'<i>Ordinal</i> est indiquée par les deux sigles <em>ⲇⲇ</em>: <em>ⲇⲉⲓⲛⲁ ⲇⲉⲓⲛⲟⲥ</em> «un tel, fils d'un tel».</p>
+    <p>2. A peu près de même sens, mais de racine différente (égyp. <i>men</i>) est le mot composé <em>ⲡⲁ-ⲫ-ⲙⲁⲛ</em> «un tel» qui est rare:</p>
+    <p><em>ⲡⲁⲫⲙⲁⲛ ⲛ̀ϧⲉⲗϣⲓⲣⲓ</em> «tel jeune homme»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲕⲉ</em> «autre, aussi» (S. <em>ⲕⲉ</em>, <em>ϭⲉ</em>) est adjectif et adverbe.</p>
+    <p><i>Adjectif</i>, il signifie «autre» et précède toujours le nom. Celui-ci peut être déterminé ou indéterminé; lorsqu'il est indéterminé, il ne prend pas d'article au singulier; au pluriel, il prend <em>ϩⲁⲛ</em>:</p>
+    <p><em>ϯ-ⲕⲉ-ⲫⲁϣⲓ</em> «l'autre moitié»<sup class="footnote">4</sup>;</p>
+    <p><em>ⲛⲉⲙ ⲕⲉ-ⲁⲗⲟⲩ</em> «avec un autre enfant»<sup class="footnote">5</sup>;</p>
+    <p><em>ϩⲁⲛ-ⲕⲉ-ⲁⲗⲱⲟⲩⲓ</em> «d'autres enfants».</p>
+    <p><i>Adverbe</i>, il signifie «aussi» et doit être précédé de l'article <em>ⲡ</em> ou de ses dérivés. En ce sens il s'emploie dans deux cas:</p>
+    <p>1. Devant les noms et même parfois les pronoms:</p>
+    <p><em>ⲛⲓ-ⲕⲉ-ⲟⲩⲣⲱⲟⲩ</em> «les rois aussi»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲡ-ⲕⲉ-ⲏⲣⲱⲇⲏⲥ</em> «Hérode aussi»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲡ-ⲕⲉ-ⲛⲑⲟⲕ ϩⲱⲕ</em> «toi aussi»<sup class="footnote">8</sup>.</p>
+    <p class="footnote">1. 1 Ord. 17.</p>
+    <p class="footnote">2. 1 Ord. 21.</p>
+    <p class="footnote">3. HM. 205.</p>
+    <p class="footnote">4. Ex. 24, 6.</p>
+    <p class="footnote">5. Kef. 334.</p>
+    <p class="footnote">6. Bar. 6, 50.</p>
+    <p class="footnote">7. Luc 23, 15.</p>
+    <p class="footnote">8. Zoega 115.</p>
   </div>
 </div>
 	</body>
