--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1687,6 +1687,27 @@
     <p class="footnote">6. Bar. 6, 50.</p>
     <p class="footnote">7. Luc 23, 15.</p>
     <p class="footnote">8. Zoega 115.</p>
+    <p>2. Devant l'infinitif des verbes, sous la forme <em>ⲉⲣ-ⲡ-ⲕⲉ</em>:</p>
+    <p><em>ⲧⲉⲛ-ⲉⲣ-ⲡ-ⲕⲉ-ⲥⲁϫⲓ</em> «nous parlons aussi»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁϥ-ⲉⲣ-ⲡ-ⲕⲉ-ⲟⲩⲱⲣⲡ</em> «il a aussi envoyé»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲭⲉⲧ</em>, <i>fém.</i> <em>ⲭⲉϯ</em> est toujours employé subst.</p>
+    <p><em>ⲡⲓ-ⲭⲉⲧ</em> «l'autre», <em>ⲡⲁⲓ-ⲭⲉⲧ</em> «cet autre».</p>
+    <p><em>ⲕⲉⲭⲱⲟⲩⲛⲓ</em> «autres» lui sert de pluriel et a le même emploi:</p>
+    <p><em>ⲛⲓ-ⲕⲉⲭⲱⲟⲩⲛⲓ</em> «les autres»; <em>ϩⲁⲛ-ⲕⲉⲭⲱⲟⲩⲛⲓ</em> «d'autres».</p>
+    <p><i>Chacun, chaque.</i></p>
+    <p>Pour traduire «chacun», on répète deux fois <em>ⲟⲩⲁⲓ</em> <i>f.</i> <em>ⲟⲩⲓ</em> avec l'article défini si l'expression est déterminée, sans article, si elle est indéterminée:</p>
+    <p><i>masc.</i> <em>ⲫ-ⲟⲩⲁⲓ ⲫ-ⲟⲩⲁⲓ</em>, <em>ⲡⲓ-ⲟⲩⲁⲓ ⲡⲓ-ⲟⲩⲁⲓ</em> «chacun»<sup class="footnote">3</sup>;</p>
+    <p><i>fém.</i> <em>ⲑ-ⲟⲩⲓ ⲑ-ⲟⲩⲓ</em> «chacune».</p>
+    <p>On traduit «chaque» en répétant deux fois le nom que ce mot détermine:</p>
+    <p><em>ⲡⲓⲉϩⲟⲟⲩ ⲡⲓⲉϩⲟⲟⲩ</em> «chaque jour»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲡⲓⲟϩⲓ ⲡⲓⲟϩⲓ</em> «chaque troupeau»<sup class="footnote">5</sup>.</p>
+    <p>L'adjectif «chaque» se rend par <em>ⲧⲉⲛ-</em> dans l'expression «chaque année»: <em>ⲟⲩⲥⲟⲡ ⲛ̀ⲧⲉⲛⲣⲟⲙⲡⲓ</em> «une fois chaque année»<sup class="footnote">6</sup>.</p>
+    <p class="footnote">1. Hébr. 6, 9.</p>
+    <p class="footnote">2. AM. 254.</p>
+    <p class="footnote">3. Th. 149.</p>
+    <p class="footnote">4. Mt. 6, 34.</p>
+    <p class="footnote">5. Gen. 32, 16.</p>
+    <p class="footnote">6. Ex. 30, 10; Lév. 16, 34; Cf. AB. 88.</p>
   </div>
 </div>
 	</body>
